--- a/style.css
+++ b/style.css
@@ -397,6 +397,12 @@ img, .project-image, .profile-pic {
 
 /* Adaptation pour petits écrans */
 @media (max-width: 700px) {
+  body {
+    padding-top: 70px; /* Décale tout le contenu sous la navbar sur mobile */
+  }
+  header {
+    margin-top: 60px; /* Laisse de la place pour la navbar fixe sur mobile */
+  }
   section {
     padding: 18px 4vw;
   }
